--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tensorflow-models/posenet": "^2.2.0",
-    "@tensorflow-models/toxicity": "^1.2.0",
-    "@tensorflow/tfjs": "^1.3.2",
-    "@tensorflow/tfjs-vis": "^1.5.1",
-    "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.4.1",
-    "jquery": "^3.6.0",
-    "tfjs-tiny-yolov3": "^1.0.3"
+    "@tensorflow-models/posenet": "2.2.0",
+    "@tensorflow-models/toxicity": "1.2.0",
+    "@tensorflow/tfjs": "1.3.2",
+    "@tensorflow/tfjs-vis": "1.5.1",
+    "babel-polyfill": "6.26.0",
+    "bootstrap": "4.4.1",
+    "jquery": "3.6.0",
+    "tfjs-tiny-yolov3": "1.0.3"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
